@@ -196,7 +196,7 @@ abstract class PayIntelligent_Ratepay_Model_Method_Abstract extends Mage_Payment
         $shippingAddress = $quote->getShippingAddress();
         $diff = array_diff($this->getHelper()->getImportantAddressData($shippingAddress), $this->getHelper()->getImportantAddressData($billingAddress));
 
-        if (count($diff)) {
+        if (!$this->getConfigData('delivery_address', $storeId) && count($diff)) {
             return false;
         }
 
