@@ -160,6 +160,16 @@
                             <show_in_store>1</show_in_store>
                         </b2b>
 
+                        <delivery_address translate="label">
+                            <label>Pi Delivery Address</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>adminhtml/system_config_source_yesno</source_model>
+                            <sort_order>32</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </delivery_address>
+
                         <payment_fee translate="label">
                             <label>Pi RatePAY Payment Fee</label>
                             <frontend_type>text</frontend_type>
@@ -312,6 +322,16 @@
                             <show_in_website>1</show_in_website>
                             <show_in_store>1</show_in_store>
                         </b2b>
+
+                        <delivery_address translate="label">
+                            <label>Pi Delivery Address</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>adminhtml/system_config_source_yesno</source_model>
+                            <sort_order>32</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </delivery_address>
 
                         <payment_fee translate="label">
                             <label>Pi RatePAY Payment Fee</label>
@@ -503,6 +523,16 @@
                             <show_in_website>1</show_in_website>
                             <show_in_store>1</show_in_store>
                         </b2b>
+
+                        <delivery_address translate="label">
+                            <label>Pi Delivery Address</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>adminhtml/system_config_source_yesno</source_model>
+                            <sort_order>32</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </delivery_address>
 
                         <payment_fee translate="label">
                             <label>Pi RatePAY Payment Fee</label>
