@@ -26,6 +26,7 @@
 "Pi Email","E-Mail"
 "Pi CEO","Geschäftsführer"
 "Pi B2B", "B2B"
+"Pi Delivery Address", "Abweichende Lieferadresse"
 "Pi RatePAY Payment Fee", "RatePAY Zahlartenaufschlag"
 "Pi RatePAY privacy policy URL","RatePAY Datenschutzerklärung Url"
 "Pi Read more","Mehr Informationen"
