@@ -26,6 +26,7 @@
 "Pi Email","E-Mail"
 "Pi CEO","Chief executive Officer"
 "Pi B2B", "B2B"
+"Pi Delivery Address", "Abweichende Lieferadresse"
 "Pi RatePAY Payment Fee", "RatePAY Zahlartenaufschlag"
 "Pi RatePAY privacy policy URL","RatePAY data privacy policy Url"
 "Pi Read more","Read more"
